plugins {
    id 'io.spring.dependency-management' version '1.1.2'
}

ext {
    cxfVersion = "4.0.0"
    cxfPluginVersion = "4.0.0"
    jaxb2Version = "3.0.0"
    jaxb2NamespacePrefixVersion = "2.0"
    jaxbImplVersion = "4.0.1"
    jaxsWsVersion = "4.0.1"
    jakartaWsVersion = "4.0.0"
    springbootMavenBomVersion = '3.1.2'
    guavaVersion = '32.1.2-jre'
}

group = 'se.inera.intyg.intyg-proxy-service'
version = '0.0.1-SNAPSHOT'

allprojects {
    repositories {
        mavenLocal()
        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    sourceCompatibility = '17'
    targetCompatibility = '17'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
        }
    }
}